change customElements define function

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>Customer html5 tag</title>
 
   <script>
-    document.registerElement('x-foo')
+    customElements.define('x-foo')
   </script>
 
   <style>
